--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
   --accent: #7e57c2;
-  --accent-foreground: oklch(0.205 0 0);
+  --accent-foreground: #c792ea;
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.922 0 0);
   --input: oklch(0.922 0 0);
@@ -51,15 +51,6 @@
   --sidebar-ring: oklch(0.708 0 0);
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
   display: flex;
@@ -69,7 +60,7 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 2.5em;
   line-height: 1.1;
 }
 
@@ -80,29 +71,8 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
 
 @theme inline {
@@ -187,5 +157,22 @@ button:focus-visible {
   body {
     @apply bg-background text-foreground;
     font-family: "JetBrains Mono Variable", monospace;
+  }
+}
+
+@layer components {
+  .nav-link:hover {
+    color: var(--primary);
+    text-decoration: underline 1.25px;
+    text-underline-offset: 3px;
+  }
+
+  .link {
+    @apply relative font-bold text-primary border-b-1 border-transparent transition-all duration-200;
+  }
+
+  .link:hover {
+    filter: drop-shadow(0 0 16px var(--primary));
+    border-color: var(--primary);
   }
 }
