--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@
   --secondary-foreground: oklch(0.205 0 0);
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
-  --accent: #7e57c2;
+  --accent: #292d3e;
   --accent-foreground: #c792ea;
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.922 0 0);
@@ -65,14 +65,7 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
   cursor: pointer;
-  transition: border-color 0.25s;
 }
 
 @theme inline {
@@ -161,7 +154,11 @@ button {
 }
 
 @layer components {
-  .nav-link:hover {
+  .nav-link {
+    color: var(--secondary);
+  }
+  .nav-link:hover,
+  .nav-link-active {
     color: var(--primary);
     text-decoration: underline 1.25px;
     text-underline-offset: 3px;
@@ -171,7 +168,12 @@ button {
     @apply relative font-bold text-primary border-b-1 border-transparent transition-all duration-200;
   }
 
-  .link:hover {
+  .glow {
+    @apply transition-all duration-200;
+  }
+
+  .link:hover,
+  .glow:hover {
     filter: drop-shadow(0 0 16px var(--primary));
     border-color: var(--primary);
   }
